--- a/src/index.css
+++ b/src/index.css
@@ -3,17 +3,18 @@
 @tailwind utilities;
 
 #root {
-	padding: 0 150px;
+	padding: 0;
+	margin: 0 150px;
 }
 
 @media screen and (max-width: 1024px) {
 	#root {
-		padding: 0 72px;
+		margin: 0 72px;
 	}
 }
 @media screen and (max-width: 768px) {
 	#root {
-		padding: 0 24px;
+		margin: 0 24px;
 	}
 }
 
@@ -27,4 +28,26 @@ body {
 
 * {
 	scroll-behavior: smooth;
+}
+
+/* HERO SECTION */
+
+.miami {
+	-webkit-background-clip: text !important;
+	-webkit-text-fill-color: transparent;
+	background: linear-gradient(
+		90deg,
+		rgb(60, 51, 239) 0%,
+		rgb(244, 51, 102) 100%
+	);
+	background-clip: text;
+	font-size: 170px;
+	font-weight: 800;
+	letter-spacing: 0;
+}
+
+.walker {
+	font-size: 170px;
+	font-weight: 800;
+	letter-spacing: -8.5px;
 }
