--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,7 @@ body {
 
 /* HERO SECTION */
 
-.miami {
+.gradient-text {
 	-webkit-background-clip: text !important;
 	-webkit-text-fill-color: transparent;
 	background: linear-gradient(
@@ -41,33 +41,10 @@ body {
 		rgb(244, 51, 102) 100%
 	);
 	background-clip: text;
-	font-weight: 800;
-	letter-spacing: 0;
-}
-
-.walker {
-	font-weight: 800;
-	letter-spacing: -8.5px;
 }
 
 @media screen and (max-width: 768px) {
-	.walker {
-		letter-spacing: 0;
-	}
 	.miami {
 		background: white;
 	}
-}
-
-@keyframes scroll {
-	0% {
-		transform: translateX(0);
-	}
-	100% {
-		transform: translateX(-100%);
-	}
-}
-
-.animate-scroll {
-	animation: scroll 20s linear infinite;
 }
