--- a/src/index.css
+++ b/src/index.css
@@ -48,3 +48,21 @@ body {
 		background: white;
 	}
 }
+
+/* STATS SECTION */
+.stats-wrapper {
+	-webkit-background-clip: text;
+	-webkit-text-stroke: 3px transparent;
+	background-image: linear-gradient(
+		180deg,
+		rgb(87, 53, 220) 0%,
+		rgb(229, 53, 116) 100%
+	);
+	background-clip: text;
+	color: white;
+	font-family: "Poppins", Helvetica;
+	font-size: 70px;
+	font-weight: 600;
+	letter-spacing: 0;
+	line-height: 80px;
+}
